; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264qpel_msa.c_ff_put_h264_qpel16_mc30_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264qpel_msa.c_ff_put_h264_qpel16_mc30_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@luma_mask_arr = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_put_h264_qpel16_mc30_msa(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  %16 = alloca i64, align 8
  %17 = alloca i64, align 8
  %18 = alloca i64, align 8
  %19 = alloca i64, align 8
  %20 = alloca i64, align 8
  %21 = alloca i64, align 8
  %22 = alloca i64, align 8
  %23 = alloca i64, align 8
  %24 = alloca i64, align 8
  %25 = alloca i64, align 8
  %26 = alloca i64, align 8
  %27 = alloca i64, align 8
  %28 = alloca i64, align 8
  %29 = alloca i64, align 8
  %30 = alloca i64, align 8
  %31 = alloca i64, align 8
  %32 = alloca i64, align 8
  %33 = alloca i64, align 8
  %34 = alloca i64, align 8
  %35 = alloca i64, align 8
  %36 = alloca i64, align 8
  %37 = alloca i64, align 8
  %38 = alloca i32, align 4
  %39 = alloca i32, align 4
  %40 = alloca i32, align 4
  %41 = alloca i32, align 4
  %42 = alloca i32, align 4
  %43 = alloca i32, align 4
  %44 = alloca i32, align 4
  %45 = alloca i32, align 4
  %46 = alloca i64, align 8
  %47 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %48 = call i64 @__msa_ldi_b(i32 -5)
  store i64 %48, i64* %46, align 8
  %49 = call i64 @__msa_ldi_b(i32 20)
  store i64 %49, i64* %47, align 8
  %50 = load i32*, i32** @luma_mask_arr, align 8
  %51 = getelementptr inbounds i32, i32* %50, i64 0
  %52 = load i64, i64* %19, align 8
  %53 = load i64, i64* %20, align 8
  %54 = load i64, i64* %21, align 8
  %55 = call i32 @LD_SB3(i32* %51, i32 16, i64 %52, i64 %53, i64 %54)
  %56 = load i64, i64* %19, align 8
  %57 = add nsw i64 %56, 8
  store i64 %57, i64* %22, align 8
  %58 = load i64, i64* %20, align 8
  %59 = add nsw i64 %58, 8
  store i64 %59, i64* %23, align 8
  %60 = load i64, i64* %21, align 8
  %61 = add nsw i64 %60, 8
  store i64 %61, i64* %24, align 8
  %62 = load i32*, i32** %5, align 8
  %63 = getelementptr inbounds i32, i32* %62, i64 -2
  store i32* %63, i32** %5, align 8
  store i32 4, i32* %7, align 4
  br label %64

64:                                               ; preds = %68, %3
  %65 = load i32, i32* %7, align 4
  %66 = add nsw i32 %65, -1
  store i32 %66, i32* %7, align 4
  %67 = icmp ne i32 %65, 0
  br i1 %67, label %68, label %364

68:                                               ; preds = %64
  %69 = load i32*, i32** %5, align 8
  %70 = load i64, i64* %12, align 8
  %71 = load i64, i64* %13, align 8
  %72 = call i32 @LD_SB2(i32* %69, i32 16, i64 %70, i64 %71)
  %73 = load i32, i32* %6, align 4
  %74 = load i32*, i32** %5, align 8
  %75 = sext i32 %73 to i64
  %76 = getelementptr inbounds i32, i32* %74, i64 %75
  store i32* %76, i32** %5, align 8
  %77 = load i32*, i32** %5, align 8
  %78 = load i64, i64* %14, align 8
  %79 = load i64, i64* %15, align 8
  %80 = call i32 @LD_SB2(i32* %77, i32 16, i64 %78, i64 %79)
  %81 = load i32, i32* %6, align 4
  %82 = load i32*, i32** %5, align 8
  %83 = sext i32 %81 to i64
  %84 = getelementptr inbounds i32, i32* %82, i64 %83
  store i32* %84, i32** %5, align 8
  %85 = load i32*, i32** %5, align 8
  %86 = load i64, i64* %16, align 8
  %87 = load i64, i64* %17, align 8
  %88 = call i32 @LD_SB2(i32* %85, i32 16, i64 %86, i64 %87)
  %89 = load i32, i32* %6, align 4
  %90 = load i32*, i32** %5, align 8
  %91 = sext i32 %89 to i64
  %92 = getelementptr inbounds i32, i32* %90, i64 %91
  store i32* %92, i32** %5, align 8
  %93 = load i32*, i32** %5, align 8
  %94 = load i64, i64* %18, align 8
  %95 = load i64, i64* %25, align 8
  %96 = call i32 @LD_SB2(i32* %93, i32 16, i64 %94, i64 %95)
  %97 = load i32, i32* %6, align 4
  %98 = load i32*, i32** %5, align 8
  %99 = sext i32 %97 to i64
  %100 = getelementptr inbounds i32, i32* %98, i64 %99
  store i32* %100, i32** %5, align 8
  %101 = load i64, i64* %12, align 8
  %102 = load i64, i64* %13, align 8
  %103 = load i64, i64* %14, align 8
  %104 = load i64, i64* %15, align 8
  %105 = load i64, i64* %16, align 8
  %106 = load i64, i64* %17, align 8
  %107 = load i64, i64* %18, align 8
  %108 = load i64, i64* %25, align 8
  %109 = call i32 @XORI_B8_128_SB(i64 %101, i64 %102, i64 %103, i64 %104, i64 %105, i64 %106, i64 %107, i64 %108)
  %110 = load i64, i64* %12, align 8
  %111 = load i64, i64* %12, align 8
  %112 = load i64, i64* %12, align 8
  %113 = load i64, i64* %13, align 8
  %114 = load i64, i64* %19, align 8
  %115 = load i64, i64* %22, align 8
  %116 = load i64, i64* %27, align 8
  %117 = load i64, i64* %30, align 8
  %118 = call i32 @VSHF_B2_SB(i64 %110, i64 %111, i64 %112, i64 %113, i64 %114, i64 %115, i64 %116, i64 %117)
  %119 = load i64, i64* %14, align 8
  %120 = load i64, i64* %14, align 8
  %121 = load i64, i64* %14, align 8
  %122 = load i64, i64* %15, align 8
  %123 = load i64, i64* %19, align 8
  %124 = load i64, i64* %22, align 8
  %125 = load i64, i64* %33, align 8
  %126 = load i64, i64* %36, align 8
  %127 = call i32 @VSHF_B2_SB(i64 %119, i64 %120, i64 %121, i64 %122, i64 %123, i64 %124, i64 %125, i64 %126)
  %128 = load i64, i64* %12, align 8
  %129 = load i64, i64* %12, align 8
  %130 = load i64, i64* %12, align 8
  %131 = load i64, i64* %13, align 8
  %132 = load i64, i64* %20, align 8
  %133 = load i64, i64* %23, align 8
  %134 = load i64, i64* %28, align 8
  %135 = load i64, i64* %31, align 8
  %136 = call i32 @VSHF_B2_SB(i64 %128, i64 %129, i64 %130, i64 %131, i64 %132, i64 %133, i64 %134, i64 %135)
  %137 = load i64, i64* %14, align 8
  %138 = load i64, i64* %14, align 8
  %139 = load i64, i64* %14, align 8
  %140 = load i64, i64* %15, align 8
  %141 = load i64, i64* %20, align 8
  %142 = load i64, i64* %23, align 8
  %143 = load i64, i64* %34, align 8
  %144 = load i64, i64* %37, align 8
  %145 = call i32 @VSHF_B2_SB(i64 %137, i64 %138, i64 %139, i64 %140, i64 %141, i64 %142, i64 %143, i64 %144)
  %146 = load i64, i64* %12, align 8
  %147 = load i64, i64* %12, align 8
  %148 = load i64, i64* %12, align 8
  %149 = load i64, i64* %13, align 8
  %150 = load i64, i64* %21, align 8
  %151 = load i64, i64* %24, align 8
  %152 = load i64, i64* %29, align 8
  %153 = load i64, i64* %32, align 8
  %154 = call i32 @VSHF_B2_SB(i64 %146, i64 %147, i64 %148, i64 %149, i64 %150, i64 %151, i64 %152, i64 %153)
  %155 = load i64, i64* %14, align 8
  %156 = load i64, i64* %14, align 8
  %157 = load i64, i64* %14, align 8
  %158 = load i64, i64* %15, align 8
  %159 = load i64, i64* %21, align 8
  %160 = load i64, i64* %24, align 8
  %161 = load i64, i64* %35, align 8
  %162 = load i64, i64* %26, align 8
  %163 = call i32 @VSHF_B2_SB(i64 %155, i64 %156, i64 %157, i64 %158, i64 %159, i64 %160, i64 %161, i64 %162)
  %164 = load i64, i64* %27, align 8
  %165 = load i64, i64* %30, align 8
  %166 = load i64, i64* %33, align 8
  %167 = load i64, i64* %36, align 8
  %168 = load i32, i32* %38, align 4
  %169 = load i32, i32* %39, align 4
  %170 = load i32, i32* %40, align 4
  %171 = load i32, i32* %41, align 4
  %172 = call i32 @HADD_SB4_SH(i64 %164, i64 %165, i64 %166, i64 %167, i32 %168, i32 %169, i32 %170, i32 %171)
  %173 = load i64, i64* %28, align 8
  %174 = load i64, i64* %31, align 8
  %175 = load i64, i64* %34, align 8
  %176 = load i64, i64* %37, align 8
  %177 = load i64, i64* %46, align 8
  %178 = load i64, i64* %46, align 8
  %179 = load i64, i64* %46, align 8
  %180 = load i64, i64* %46, align 8
  %181 = load i32, i32* %38, align 4
  %182 = load i32, i32* %39, align 4
  %183 = load i32, i32* %40, align 4
  %184 = load i32, i32* %41, align 4
  %185 = call i32 @DPADD_SB4_SH(i64 %173, i64 %174, i64 %175, i64 %176, i64 %177, i64 %178, i64 %179, i64 %180, i32 %181, i32 %182, i32 %183, i32 %184)
  %186 = load i64, i64* %29, align 8
  %187 = load i64, i64* %32, align 8
  %188 = load i64, i64* %35, align 8
  %189 = load i64, i64* %26, align 8
  %190 = load i64, i64* %47, align 8
  %191 = load i64, i64* %47, align 8
  %192 = load i64, i64* %47, align 8
  %193 = load i64, i64* %47, align 8
  %194 = load i32, i32* %38, align 4
  %195 = load i32, i32* %39, align 4
  %196 = load i32, i32* %40, align 4
  %197 = load i32, i32* %41, align 4
  %198 = call i32 @DPADD_SB4_SH(i64 %186, i64 %187, i64 %188, i64 %189, i64 %190, i64 %191, i64 %192, i64 %193, i32 %194, i32 %195, i32 %196, i32 %197)
  %199 = load i64, i64* %16, align 8
  %200 = load i64, i64* %16, align 8
  %201 = load i64, i64* %16, align 8
  %202 = load i64, i64* %17, align 8
  %203 = load i64, i64* %19, align 8
  %204 = load i64, i64* %22, align 8
  %205 = load i64, i64* %27, align 8
  %206 = load i64, i64* %30, align 8
  %207 = call i32 @VSHF_B2_SB(i64 %199, i64 %200, i64 %201, i64 %202, i64 %203, i64 %204, i64 %205, i64 %206)
  %208 = load i64, i64* %18, align 8
  %209 = load i64, i64* %18, align 8
  %210 = load i64, i64* %18, align 8
  %211 = load i64, i64* %25, align 8
  %212 = load i64, i64* %19, align 8
  %213 = load i64, i64* %22, align 8
  %214 = load i64, i64* %33, align 8
  %215 = load i64, i64* %36, align 8
  %216 = call i32 @VSHF_B2_SB(i64 %208, i64 %209, i64 %210, i64 %211, i64 %212, i64 %213, i64 %214, i64 %215)
  %217 = load i64, i64* %16, align 8
  %218 = load i64, i64* %16, align 8
  %219 = load i64, i64* %16, align 8
  %220 = load i64, i64* %17, align 8
  %221 = load i64, i64* %20, align 8
  %222 = load i64, i64* %23, align 8
  %223 = load i64, i64* %28, align 8
  %224 = load i64, i64* %31, align 8
  %225 = call i32 @VSHF_B2_SB(i64 %217, i64 %218, i64 %219, i64 %220, i64 %221, i64 %222, i64 %223, i64 %224)
  %226 = load i64, i64* %18, align 8
  %227 = load i64, i64* %18, align 8
  %228 = load i64, i64* %18, align 8
  %229 = load i64, i64* %25, align 8
  %230 = load i64, i64* %20, align 8
  %231 = load i64, i64* %23, align 8
  %232 = load i64, i64* %34, align 8
  %233 = load i64, i64* %37, align 8
  %234 = call i32 @VSHF_B2_SB(i64 %226, i64 %227, i64 %228, i64 %229, i64 %230, i64 %231, i64 %232, i64 %233)
  %235 = load i64, i64* %16, align 8
  %236 = load i64, i64* %16, align 8
  %237 = load i64, i64* %16, align 8
  %238 = load i64, i64* %17, align 8
  %239 = load i64, i64* %21, align 8
  %240 = load i64, i64* %24, align 8
  %241 = load i64, i64* %29, align 8
  %242 = load i64, i64* %32, align 8
  %243 = call i32 @VSHF_B2_SB(i64 %235, i64 %236, i64 %237, i64 %238, i64 %239, i64 %240, i64 %241, i64 %242)
  %244 = load i64, i64* %18, align 8
  %245 = load i64, i64* %18, align 8
  %246 = load i64, i64* %18, align 8
  %247 = load i64, i64* %25, align 8
  %248 = load i64, i64* %21, align 8
  %249 = load i64, i64* %24, align 8
  %250 = load i64, i64* %35, align 8
  %251 = load i64, i64* %26, align 8
  %252 = call i32 @VSHF_B2_SB(i64 %244, i64 %245, i64 %246, i64 %247, i64 %248, i64 %249, i64 %250, i64 %251)
  %253 = load i64, i64* %27, align 8
  %254 = load i64, i64* %30, align 8
  %255 = load i64, i64* %33, align 8
  %256 = load i64, i64* %36, align 8
  %257 = load i32, i32* %42, align 4
  %258 = load i32, i32* %43, align 4
  %259 = load i32, i32* %44, align 4
  %260 = load i32, i32* %45, align 4
  %261 = call i32 @HADD_SB4_SH(i64 %253, i64 %254, i64 %255, i64 %256, i32 %257, i32 %258, i32 %259, i32 %260)
  %262 = load i64, i64* %28, align 8
  %263 = load i64, i64* %31, align 8
  %264 = load i64, i64* %34, align 8
  %265 = load i64, i64* %37, align 8
  %266 = load i64, i64* %46, align 8
  %267 = load i64, i64* %46, align 8
  %268 = load i64, i64* %46, align 8
  %269 = load i64, i64* %46, align 8
  %270 = load i32, i32* %42, align 4
  %271 = load i32, i32* %43, align 4
  %272 = load i32, i32* %44, align 4
  %273 = load i32, i32* %45, align 4
  %274 = call i32 @DPADD_SB4_SH(i64 %262, i64 %263, i64 %264, i64 %265, i64 %266, i64 %267, i64 %268, i64 %269, i32 %270, i32 %271, i32 %272, i32 %273)
  %275 = load i64, i64* %29, align 8
  %276 = load i64, i64* %32, align 8
  %277 = load i64, i64* %35, align 8
  %278 = load i64, i64* %26, align 8
  %279 = load i64, i64* %47, align 8
  %280 = load i64, i64* %47, align 8
  %281 = load i64, i64* %47, align 8
  %282 = load i64, i64* %47, align 8
  %283 = load i32, i32* %42, align 4
  %284 = load i32, i32* %43, align 4
  %285 = load i32, i32* %44, align 4
  %286 = load i32, i32* %45, align 4
  %287 = call i32 @DPADD_SB4_SH(i64 %275, i64 %276, i64 %277, i64 %278, i64 %279, i64 %280, i64 %281, i64 %282, i32 %283, i32 %284, i32 %285, i32 %286)
  %288 = load i64, i64* %13, align 8
  %289 = load i64, i64* %12, align 8
  %290 = load i64, i64* %15, align 8
  %291 = load i64, i64* %14, align 8
  %292 = load i64, i64* %17, align 8
  %293 = load i64, i64* %16, align 8
  %294 = load i64, i64* %25, align 8
  %295 = load i64, i64* %18, align 8
  %296 = load i64, i64* %12, align 8
  %297 = load i64, i64* %14, align 8
  %298 = load i64, i64* %16, align 8
  %299 = load i64, i64* %18, align 8
  %300 = call i32 @SLDI_B4_SB(i64 %288, i64 %289, i64 %290, i64 %291, i64 %292, i64 %293, i64 %294, i64 %295, i32 3, i64 %296, i64 %297, i64 %298, i64 %299)
  %301 = load i32, i32* %38, align 4
  %302 = load i32, i32* %39, align 4
  %303 = load i32, i32* %40, align 4
  %304 = load i32, i32* %41, align 4
  %305 = call i32 @SRARI_H4_SH(i32 %301, i32 %302, i32 %303, i32 %304, i32 5)
  %306 = load i32, i32* %42, align 4
  %307 = load i32, i32* %43, align 4
  %308 = load i32, i32* %44, align 4
  %309 = load i32, i32* %45, align 4
  %310 = call i32 @SRARI_H4_SH(i32 %306, i32 %307, i32 %308, i32 %309, i32 5)
  %311 = load i32, i32* %38, align 4
  %312 = load i32, i32* %39, align 4
  %313 = load i32, i32* %40, align 4
  %314 = load i32, i32* %41, align 4
  %315 = call i32 @SAT_SH4_SH(i32 %311, i32 %312, i32 %313, i32 %314, i32 7)
  %316 = load i32, i32* %42, align 4
  %317 = load i32, i32* %43, align 4
  %318 = load i32, i32* %44, align 4
  %319 = load i32, i32* %45, align 4
  %320 = call i32 @SAT_SH4_SH(i32 %316, i32 %317, i32 %318, i32 %319, i32 7)
  %321 = load i32, i32* %39, align 4
  %322 = load i32, i32* %38, align 4
  %323 = load i32, i32* %41, align 4
  %324 = load i32, i32* %40, align 4
  %325 = load i64, i64* %8, align 8
  %326 = load i64, i64* %9, align 8
  %327 = call i32 @PCKEV_B2_SB(i32 %321, i32 %322, i32 %323, i32 %324, i64 %325, i64 %326)
  %328 = load i32, i32* %43, align 4
  %329 = load i32, i32* %42, align 4
  %330 = load i32, i32* %45, align 4
  %331 = load i32, i32* %44, align 4
  %332 = load i64, i64* %10, align 8
  %333 = load i64, i64* %11, align 8
  %334 = call i32 @PCKEV_B2_SB(i32 %328, i32 %329, i32 %330, i32 %331, i64 %332, i64 %333)
  %335 = load i64, i64* %8, align 8
  %336 = load i64, i64* %12, align 8
  %337 = call i64 @__msa_aver_s_b(i64 %335, i64 %336)
  store i64 %337, i64* %8, align 8
  %338 = load i64, i64* %9, align 8
  %339 = load i64, i64* %14, align 8
  %340 = call i64 @__msa_aver_s_b(i64 %338, i64 %339)
  store i64 %340, i64* %9, align 8
  %341 = load i64, i64* %10, align 8
  %342 = load i64, i64* %16, align 8
  %343 = call i64 @__msa_aver_s_b(i64 %341, i64 %342)
  store i64 %343, i64* %10, align 8
  %344 = load i64, i64* %11, align 8
  %345 = load i64, i64* %18, align 8
  %346 = call i64 @__msa_aver_s_b(i64 %344, i64 %345)
  store i64 %346, i64* %11, align 8
  %347 = load i64, i64* %8, align 8
  %348 = load i64, i64* %9, align 8
  %349 = load i64, i64* %10, align 8
  %350 = load i64, i64* %11, align 8
  %351 = call i32 @XORI_B4_128_SB(i64 %347, i64 %348, i64 %349, i64 %350)
  %352 = load i64, i64* %8, align 8
  %353 = load i64, i64* %9, align 8
  %354 = load i64, i64* %10, align 8
  %355 = load i64, i64* %11, align 8
  %356 = load i32*, i32** %4, align 8
  %357 = load i32, i32* %6, align 4
  %358 = call i32 @ST_SB4(i64 %352, i64 %353, i64 %354, i64 %355, i32* %356, i32 %357)
  %359 = load i32, i32* %6, align 4
  %360 = mul nsw i32 4, %359
  %361 = load i32*, i32** %4, align 8
  %362 = sext i32 %360 to i64
  %363 = getelementptr inbounds i32, i32* %361, i64 %362
  store i32* %363, i32** %4, align 8
  br label %64

364:                                              ; preds = %64
  ret void
}

declare dso_local i64 @__msa_ldi_b(i32) #1

declare dso_local i32 @LD_SB3(i32*, i32, i64, i64, i64) #1

declare dso_local i32 @LD_SB2(i32*, i32, i64, i64) #1

declare dso_local i32 @XORI_B8_128_SB(i64, i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @VSHF_B2_SB(i64, i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @HADD_SB4_SH(i64, i64, i64, i64, i32, i32, i32, i32) #1

declare dso_local i32 @DPADD_SB4_SH(i64, i64, i64, i64, i64, i64, i64, i64, i32, i32, i32, i32) #1

declare dso_local i32 @SLDI_B4_SB(i64, i64, i64, i64, i64, i64, i64, i64, i32, i64, i64, i64, i64) #1

declare dso_local i32 @SRARI_H4_SH(i32, i32, i32, i32, i32) #1

declare dso_local i32 @SAT_SH4_SH(i32, i32, i32, i32, i32) #1

declare dso_local i32 @PCKEV_B2_SB(i32, i32, i32, i32, i64, i64) #1

declare dso_local i64 @__msa_aver_s_b(i64, i64) #1

declare dso_local i32 @XORI_B4_128_SB(i64, i64, i64, i64) #1

declare dso_local i32 @ST_SB4(i64, i64, i64, i64, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
